italic gene names in Y axis

--- a/plotting_swim_lane_from_validation_table_GEL_EHv255_ILMN_EHv312_with_cutoff_200_afterVisualInspection.ipynb
+++ b/plotting_swim_lane_from_validation_table_GEL_EHv255_ILMN_EHv312_with_cutoff_200_afterVisualInspection.ipynb
@@ -345,7 +345,7 @@
     "    gene_names = sorted(gene_names, key=lambda k: k[1])\n",
     "    gene_names = [g for g, _ in gene_names]\n",
     "    ax.yaxis.set_ticks(range(0, len(gene_names)))\n",
-    "    ax.yaxis.set_ticklabels(gene_names)\n",
+    "    ax.yaxis.set_ticklabels(gene_names, style='italic')\n",
     "    ax.margins(x=0, y=0)\n",
     "    ax.set(xlabel='repeat size', ylabel='');"
    ]
